# biscuit-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  shell.nix  test.bats
.github/workflows/: release.yml  rust.yml
ci/: cargo-out-dir
src/: cli.rs  errors.rs  input.rs  inspect.rs  main.rs
