[package]
name = "biscuit-auth-cli"
version = "0.1.0"
description = "a CLI to manipulate biscuit tokens"
authors = ["Clement Delafargue <clement@delafargue.name>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/biscuit-auth/biscuit-cli"

[[bin]]
name = "biscuit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
biscuit-auth = { git = "https://github.com/CleverCloud/biscuit-rust", branch = "master" }
clap = "3.0.0-beta.2"
hex = "0.4.3"
tempfile = "3.2.0"
