[package]
name = "biscuit-cli"
version = "0.2.0"
description = "a CLI to manipulate biscuit tokens"
authors = ["Clement Delafargue <clement@delafargue.name>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/biscuit-auth/biscuit-cli"
homepage = "https://www.biscuitsec.org"
readme = "README.md"

[[bin]]
name = "biscuit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
biscuit-auth = { git = "https://github.com/biscuit-auth/biscuit-rust", branch = "3rd-party" }
clap = { version = "^3.0", features = ["color", "derive"] }
chrono = "^0.4"
hex = "0.4.3"
parse_duration = "^2.1"
tempfile = "3.2.0"
shell-words = "^1.0.0"
